--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -28,6 +28,8 @@
   "sip_trunk_password": "SIP Trunk Password",
   "nickname": "Nickname",
   "delete_phone_number": "Delete Phone Number",
+  "phone_number_imported_successfully": "Phone number imported and linked to agent successfully",
+  "phone_number_deleted_successfully": "Phone number deleted successfully",
   "delete_phone_number_confirmation": "Are you sure you want to delete this phone number? This action cannot be undone.",
   "yes_delete_phone_number": "Yes, delete phone number",
   "phone_number_info_tooltip": "The number you are trying to import in E.164 format of the number (+country code, then number with no space, no special characters), e.g. +1234567890",
@@ -1779,6 +1781,7 @@
   "cal_ai_phone_numbers_description": "Manage your Cal AI Phone Numbers",
   "import_number": "Import Number",
   "import_phone_number": "Import Phone Number",
+  "unauthorized_create_workflow": "You are not authorized to create this workflow",
   "import_phone_number_description": "Import your Twilio phone number to use with Cal AI Phone",
   "ai_self_serve_tab_title": "Cal AI Playground ",
   "ai_self_serve_tab_description": "Create and manage AI-powered voice agents with ease",
