fix: improvements and i18n

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1777,10 +1777,21 @@
   "recurring_event_doesnt_support_booker_booking_limit": "Recurring events don't support booker booking limit",
   "add_limit": "Add Limit",
   "phone_numbers": "Phone Numbers",
+  "unsubscribe": "Unsubscribe",
+  "delete_workflow_step": "Delete Workflow Step",
+  "unsubscribe_phone_number": "Unsubscribe Phone Number",
+  "no_phone_numnber_connected":"No phone number connected",
+  "are_you_sure_you_want_to_delete_workflow_step": "Are you sure you want to delete this workflow step?",
+  "are_you_still_want_to_unsubscribe": "Are you sure you want to unsubscribe the phone number from this agent?",
+  "the_action_will_disconnect_phone_number": "This action will disconnect the phone number from the agent. The agent will not be able to make calls until a new phone number is connected.",
   "cal_ai_phone_numbers": "Cal AI Phone Numbers",
   "cal_ai_phone_numbers_description": "Manage your Cal AI Phone Numbers",
   "import_number": "Import Number",
+  "this_action_will_also": "This action will also:",
   "import_phone_number": "Import Phone Number",
+  "active_subscription": "Active Subscription",
+  "cancel_your_phone_number_subscription": "Cancel your phone number subscription",
+  "delete_associated_phone_number": "Delete the associated phone number",
   "unauthorized_create_workflow": "You are not authorized to create this workflow",
   "import_phone_number_description": "Import your Twilio phone number to use with Cal AI Phone",
   "ai_self_serve_tab_title": "Cal AI Playground ",
