--- a/docs/platform/atoms/availability-settings.mdx
+++ b/docs/platform/atoms/availability-settings.mdx
@@ -156,7 +156,16 @@ export function AvailabilityWithValidation() {
   };
 
   const handleSubmit = () => {
-    availabilityRef.current?.handleFormSubmit();
+    availabilityRef.current?.handleFormSubmit({
+      onSuccess: () => {
+        console.log('Availability updated successfully');
+        // Additional success handling logic here
+      },
+      onError: (error) => {
+        console.error('Error updating availability:', error);
+        // Additional error handling logic here
+      }
+    });
   };
 
   return (
@@ -183,6 +192,20 @@ export function AvailabilityWithValidation() {
 |:-------|:------------|
 | validateForm | Validates the current availability form state and returns a promise with validation results. |
 | handleFormSubmit | Programmatically submits the availability form, triggering the same validation and submission flow as clicking the save button. Unlike `validateForm`, this method will check required fields and prevent submission unless all required fields are set |
+
+### Callbacks
+
+The `handleFormSubmit` method accepts an optional callbacks object with the following properties:
+
+```typescript
+type AvailabilitySettingsFormCallbacks = {
+  onSuccess?: () => void;
+  onError?: (error: Error) => void;
+};
+```
+
+- **onSuccess**: Called when the form submission is successful. This allows you to execute additional logic after a successful update.
+- **onError**: Called when an error occurs during form submission. The error parameter contains details about what went wrong, allowing you to handle specific error cases or display custom error messages.
 
 The `validateForm` method returns an `AvailabilityFormValidationResult` object with:
 - `isValid`: Boolean indicating if the form passed validation
