chore: i18n, other improvements

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -17,17 +17,14 @@
   "verify_email_subject": "{{appName}}: Verify your account",
   "verify_email_subject_verifying_email": "{{appName}}: Verify your email",
   "check_your_email": "Check your email",
-  "assigned_phone_number": "Assigned Phone Number",
-  "phone_number_assigned_successfully": "Phone number assigned successfully",
-  "phone_number_unassigned_successfully": "Phone number unassigned successfully",
-  "this_is_the_number_your_agent_will_use": "This is the number your agent will use",
-  "buy_and_assign_number": "Buy and Assign Number",
-  "configure_agent": "Configure Agent",
   "termination_uri": "Termination URI",
   "sip_trunk_username": "SIP Trunk User Name",
   "sip_trunk_password": "SIP Trunk Password",
   "nickname": "Nickname",
   "delete_phone_number": "Delete Phone Number",
+  "workflow_validation_failed": "Workflow validation failed",
+  "workflow_validation_empty_fields": "One or more workflow steps have empty message content",
+  "workflow_validation_unverified_contacts": "One or more phone numbers or email addresses are not verified",
   "phone_number_imported_successfully": "Phone number imported and linked to agent successfully",
   "phone_number_deleted_successfully": "Phone number deleted successfully",
   "delete_phone_number_confirmation": "Are you sure you want to delete this phone number? This action cannot be undone.",
@@ -37,29 +34,19 @@
   "sip_trunk_username_info_tooltip": "The username used for authentication for the SIP trunk.",
   "sip_trunk_password_info_tooltip": "The password used for authentication for the SIP trunk.",
   "nickname_info_tooltip": "Nickname of the number. This is for your reference only.",
-  "configure_agent_subtitle": "Configure your agent to make outbound calls",
   "save_and_test_call": "Save and Test Call",
-  "ai_assistant_setup_successfully": "AI Assistant setup successfully",
-  "error_setting_up_ai_assistant": "Error setting up AI Assistant",
-  "ai_configuration_deleted_successfully": "AI configuration deleted successfully",
-  "are_you_sure_you_want_to_delete_ai_configuration": "Are you sure you want to delete the AI configuration? This action cannot be undone.",
-  "delete_ai_configuration": "Delete AI Configuration",
   "old_email_address": "Old Email",
   "new_email_address": "New Email",
   "verify_email_page_body": "We've sent an email to {{email}}. It is important to verify your email address to guarantee the best email and calendar deliverability from {{appName}}.",
   "verify_email_banner_body": "Verify your email address to guarantee the best email and calendar deliverability",
   "verify_email_email_header": "Verify your email address",
   "verify_email_button": "Verify email",
-  "error_loading_llm": "Error loading LLM",
   "cal_ai_assistant": "Cal AI Assistant",
-  "setup_ai_phone_assistant": "Setup AI Phone Assistant",
-  "setup_cal_ai_phone_call_agent": "Setup Cal AI Phone Call Agent",
-  "initiating_call": "Initiating call...",
   "call_initiated_successfully": "Call initiated successfully",
-  "provide_api_key_and_timezone_to_setup": "Provide a Cal.com API key and agent's timezone to setup your AI Phone Assistant",
-  "cal_api_key": "Cal.com API key",
-  "agent_timezone": "Agent's Timezone",
-  "agent_timezone_description": "The timezone of the agent. This is used to schedule events in the agent's timezone.",
+  "please_enter_phone_number": "Please enter a phone number",
+  "agent_updated_successfully": "Agent updated successfully",
+  "agent_created_successfully": "Agent created successfully",
+  "phone_number_unsubscribed_successfully": "Phone number unsubscribed successfully",
   "send_cal_video_transcription_emails": "Send Cal Video Transcription Emails",
   "description_send_cal_video_transcription_emails": "Send emails with the transcription of the Cal Video after the meeting ends. (Requires a paid plan)",
   "verify_email_change_description": "You have recently requested to change the email address you use to log into your {{appName}} account. Please click the button below to confirm your new email address.",
@@ -164,6 +151,8 @@
   "missing_card_fields": "Missing card fields",
   "pay_now": "Pay now",
   "general_prompt": "General Prompt",
+  "general_prompt_description": "This prompt defines the agent's role and primary objectives",
+  "prompt": "Prompt",
   "begin_message": "Begin Message",
   "codebase_has_to_stay_opensource": "The codebase has to stay open source, whether it was modified or not",
   "cannot_repackage_codebase": "You can not repackage or sell the codebase",
@@ -184,6 +173,8 @@
   "confirm_or_reject_request": "Confirm or reject the request",
   "check_bookings_page_to_confirm_or_reject": "Check your bookings page to confirm or reject the booking.",
   "check_in_assistant": "Check-in Assistant",
+  "call_to": "Call to",
+  "make_test_call_to_verify_configuration": "Make Test Call to Verify Configuration",
   "check_in_assistant_description": "Makes an outbound call to check if scheduled appointment works or if you want to reschedule.",
   "create_your_own_prompt": "Create your own prompt and use it to make an outbound call.",
   "event_awaiting_approval": "An event is waiting for your approval",
@@ -309,7 +300,10 @@
   "2fa_scan_image_or_use_code": "Scan the image below with the authenticator app on your phone or manually enter the text code instead.",
   "text": "Text",
   "your_phone_number": "Your Phone Number",
+  "initial_message": "Initial Message",
+  "initial_message_description": "The first message the agent will say when starting a call",
   "multiline_text": "Multiline Text",
+  "hi_how_are_you_doing": "Hi, how are you doing?",
   "number": "Number",
   "checkbox": "Checkbox",
   "is_required": "Is required",
@@ -328,6 +322,9 @@
   "is_still_available": "is still available.",
   "documentation": "Documentation",
   "documentation_description": "Learn how to integrate our tools with your app",
+  "having_trouble_importing": "Having trouble importing?",
+  "learn": "Learn",
+  "learn_how_to_get_your_terminator": "Learn how to get your Terminator and SIP",
   "api_reference": "API Reference",
   "api_reference_description": "A complete API reference for our libraries",
   "blog": "Blog",
@@ -635,6 +632,7 @@
   "error_changing_password": "Error changing password",
   "session_timeout_changed": "Your session configuration has been updated successfully.",
   "session_timeout_change_error": "Error updating session configuration",
+  "updating": "Updating",
   "something_went_wrong": "Something went wrong.",
   "something_doesnt_look_right": "Something doesn't look right?",
   "please_try_again": "Please try again.",
@@ -711,6 +709,7 @@
   "attendee_phone_number": "Attendee Phone Number",
   "organizer_phone_number": "Organizer Phone Number",
   "enter_phone_number": "Enter phone number",
+  "enter_phone_number_to_test_call": "Enter phone number to test call",
   "reschedule": "Reschedule",
   "reschedule_this": "Reschedule instead",
   "book_a_team_member": "Book a team member instead",
@@ -848,7 +847,6 @@
   "add_members": "Add members...",
   "no_assigned_members": "No assigned members",
   "assigned_to": "Assigned to",
-  "assigned_to_another_event": "Assigned to another event",
   "you_must_be_logged_in_to": "You must be logged in to {{url}}",
   "start_assigning_members_above": "Start assigning members above",
   "locked_fields_admin_description": "Members can not edit",
@@ -1267,6 +1265,7 @@
   "make_org_private_description": "Your organization members won't be able to see other organization members when this is turned on.",
   "make_team_private": "Make team private",
   "make_team_private_description": "Your team members won't be able to see other team members when this is turned on.",
+  "make_test_call": "Make Test Call",
   "you_cannot_see_team_members": "You cannot see all the team members of a private team.",
   "you_cannot_see_teams_of_org": "You cannot see teams of a private organization.",
   "allow_booker_to_select_duration": "Allow booker to select duration",
@@ -1312,7 +1311,6 @@
   "make_setup_instructions_3": "Select Cal.com as your Trigger app. Also choose a Trigger event.",
   "make_setup_instructions_4": "Choose your account and then enter your Unique API Key.",
   "make_setup_instructions_5": "Test your Trigger.",
-  "choose_phone_number": "Choose a phone number",
   "make_setup_instructions_6": "You're set!",
   "install_zapier_app": "Please first install the Zapier App in the app store.",
   "install_make_app": "Please first install the Make App in the app store.",
@@ -1382,8 +1380,6 @@
   "whatsapp_number_action": "send WhatsApp message to a specific number",
   "whatsapp_attendee_action": "send WhatsApp message to attendee",
   "workflows": "Workflows",
-  "agents": "Agents",
-  "agents_description": "Create Cal.ai Voice AI Agents.",
   "new_workflow_btn": "New Workflow",
   "add_new_workflow": "Add a new workflow",
   "reschedule_event_trigger": "when event is rescheduled",
@@ -1549,17 +1545,10 @@
   "apply_to_all_teams": "Apply to all team and user event types",
   "which_team_apply": "Which team will this apply to?",
   "no_workflows_description": "Workflows enable simple automation to send notifications & reminders enabling you to build processes around your events.",
-  "no_agents_description": "Cal.ai Agents are AI-powered voice agents that can call guests to schedule calls.",
   "timeformat_profile_hint": "This is an internal setting and will not affect how times are displayed on public booking pages for you or anyone booking you.",
   "create_workflow": "Create a workflow",
-  "create_agent": "Create an agent",
   "create_new_workflow_agent": "Create new workflow cal.ai voice agent",
   "create_new_workflow_agent_description": "Create a new workflow cal.ai voice agent to automate your workflows",
-  "outbound_agent": "Outbound agent",
-  "inbound_agent": "Inbound agent",
-  "edit_phone_number_agents": "Edit phone number agents",
-  "cal_ai_phone_call_action": "Call attendee using your Cal AI Voice Agent",
-  "edit_phone_number_agents_description": "Edit the agents that will be used for the phone number",
   "do_this": "Do this",
   "turn_off": "Turn off",
   "turn_on": "Turn on",
@@ -1744,6 +1733,9 @@
   "api_keys_description": "Generate API keys for accessing your own account",
   "new_api_key": "New API key",
   "active": "active",
+  "you_can_only_call_numbers_in_the_us": "You can only call numbers in the US",
+  "buy_a_phone_number_or_import_one_you_already_have": "Buy a phone number or import one you already have",
+  "test_agent": "Test Agent",
   "api_key_updated": "API key name updated",
   "api_key_update_failed": "Error updating API key name",
   "embeds_title": "HTML iframe embed",
@@ -1782,6 +1774,8 @@
   "delete_workflow_step": "Delete Workflow Step",
   "unsubscribe_phone_number": "Unsubscribe Phone Number",
   "no_phone_number_connected":"No phone number connected",
+  "failed_to_get_workflow_step_id": "Failed to get workflow step ID",
+  "test_cal_ai_agent": "Test Cal.ai Agent",
   "are_you_sure_you_want_to_delete_workflow_step": "Are you sure you want to delete this workflow step?",
   "are_you_still_want_to_unsubscribe": "Are you sure you want to unsubscribe the phone number from this agent?",
   "the_action_will_disconnect_phone_number": "This action will disconnect the phone number from the agent. The agent will not be able to make calls until a new phone number is connected.",
@@ -1795,12 +1789,7 @@
   "delete_associated_phone_number": "Delete the associated phone number",
   "unauthorized_create_workflow": "You are not authorized to create this workflow",
   "import_phone_number_description": "Import your Twilio phone number to use with Cal AI Phone",
-  "ai_self_serve_tab_title": "Cal AI Playground ",
-  "ai_self_serve_tab_description": "Create and manage AI-powered voice agents with ease",
   "team_name_required": "Team name required",
-  "insufficient_credits_to_make_phone_calls": "Insufficient credits to make phone calls",
-  "you_need_at_least_5_credits_but_only_have": "You need at least 5 credits but only have",
-  "please_purchase_more_credits": "Please purchase more credits",
   "show_attendees": "Share attendee information between guests",
   "show_available_seats_count": "Show the number of available seats",
   "how_booking_questions_as_variables": "How to use booking questions as variables?",
@@ -2030,7 +2019,6 @@
   "already_invited": "Attendee already invited",
   "no_recordings_found": "No recordings found",
   "new_workflow_subtitle": "New workflow for...",
-  "new_agent_subtitle": "New agent for...",
   "reporting": "Reporting",
   "reporting_feature": "See all incoming form data and download it as a CSV",
   "teams_plan_required": "Teams plan required",
@@ -2043,6 +2031,7 @@
   "repackage_rebrand_resell": "Repackage, rebrand and resell easily",
   "a_vast_suite_of_enterprise_features": "A vast suite of enterprise features",
   "free_license_fee": "$0.00/month",
+  "phone_number_cost": "${{price}}/month",
   "forever_open_and_free": "Forever Open & Free",
   "required_to_keep_your_code_open_source": "Required to keep your code open source",
   "cannot_repackage_and_resell": "Cannot repackage, rebrand and resell easily",
@@ -2088,12 +2077,7 @@
   "available_variables": "Available variables",
   "scheduler": "{Scheduler}",
   "no_workflows": "No workflows",
-  "no_agents": "No agents",
   "change_filter": "Change filter to see your personal and team workflows.",
-  "change_filter_agents": "Change filter to see your personal and team agents.",
-  "outbound_numbers": "Outbound Numbers",
-  "delete_agent": "Delete Agent",
-  "delete_agent_confirmation": "Are you sure you want to delete this agent? This action cannot be undone.",
   "change_filter_common": "Change filter to see the results.",
   "no_results_for_filter": "No results for the filter",
   "recommended_next_steps": "Recommended next steps",
@@ -3127,16 +3111,11 @@
   "desc": "Desc",
   "verify_email_change": "Verify email change",
   "buy_credits": "Buy Credits",
-  "buy_number": "Buy Number",
-  "no_phone_numbers_yet": "No phone numbers yet",
-  "buy_your_first_phone_number": "Buy your first phone number to get started",
   "credits": "Credits",
   "view_and_manage_credits": "View and manage credits",
   "buy_new_number": "Buy New Number",
-  "buy_number_cost_50_credits": "Buying a phone number costs 50 credits. You can buy additional credits in the <0>Credits</0> section.",
   "buy_number_cost_5_per_month": "Buying a phone number costs $5 per month. You will be charged monthly for each active phone number.",
   "area_code_optional": "Area Code (Optional)",
-  "buy_number_with_credits": "Buy Number with Credits",
   "view_and_manage_credits_description": "View and manage credits for sending SMS messages. One credit is worth 1¢ (USD). <0>Learn more</0>",
   "buy_additional_credits": "Buy additional credits ($0.01 per credit)",
   "overview": "Overview",
