--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1021,7 +1021,7 @@
   "apps_listing": "App listing",
   "category_apps": "{{category}} apps",
   "app_store": "App Store",
-  "app_store_description": "Connecting people, technology and the workplace.",
+  "app_store_description": "Connect all your favorite apps, plugins, and tools",
   "settings": "Settings",
   "event_type_moved_successfully": "Event type has been moved successfully",
   "next_step_text": "Next Step",
