Bookings section done

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -382,6 +382,7 @@
   "create_booking_link_with_calcom": "Create your own booking link with {{appName}}",
   "who": "Who",
   "what": "What",
+  "with": "With",
   "when": "When",
   "where": "Where",
   "add_to_calendar": "Add to calendar",
@@ -474,7 +475,7 @@
   "event_between_users": "{{eventName}} between {{host}} and {{attendeeName}}",
   "bookings": "Bookings",
   "booking_not_found": "Booking not found",
-  "bookings_description": "See upcoming and past events booked through your event type links.",
+  "bookings_description": "View and manage all your scheduled appointments.",
   "upcoming_bookings": "As soon as someone books a time with you it will show up here.",
   "recurring_bookings": "As soon as someone books a recurring meeting with you it will show up here.",
   "past_bookings": "Your past bookings will show up here.",
@@ -644,6 +645,7 @@
   "all_booked_today": "All booked.",
   "slots_load_fail": "Could not load the available time slots.",
   "additional_guests": "Add guests",
+  "additional_guests_sub": "An email invite will be sent to these guests automatically",
   "your_name": "Your name",
   "your_full_name": "Your full name",
   "no_name": "No name",
@@ -1555,6 +1557,7 @@
   "two_factor_auth": "Two factor authentication",
   "recurring_event_tab_description": "Set up a repeating schedule",
   "today": "today",
+  "today_capitalized": "Today",
   "appearance": "Appearance",
   "my_account": "My account",
   "general": "General",
@@ -2621,6 +2624,7 @@
   "account_already_linked": "Account is already linked",
   "send_email": "Send email",
   "mark_as_no_show": "Mark as no-show",
+  "your_notes": "Your notes",
   "unmark_as_no_show": "Unmark no-show",
   "account_unlinked_success": "Account unlinked successfully",
   "account_unlinked_error": "There was an error unlinking the account",
