fix: fixed the estonian languageon confirmation page

--- a/apps/web/public/static/locales/et/common.json
+++ b/apps/web/public/static/locales/et/common.json
@@ -380,7 +380,7 @@
   "connect": "Ühenda",
   "try_for_free": "Proovi tasuta",
   "create_booking_link_with_calcom": "Looge oma broneerimislink rakendusega {{appName}}",
-  "who": "WHO",
+  "who": "Kes",
   "what": "Mida",
   "when": "Millal",
   "where": "Kus",
