--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3432,5 +3432,6 @@
   "usage_based_expiration_description_plural": "This link can be used for {{count}} bookings",
   "stats": "Stats",
   "booking_status": "Booking status",
+  "my_bookings": "My Bookings",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
