--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -125,10 +125,14 @@
   "price": "Price",
   "paid": "Paid",
   "refunded": "Refunded",
+  "record": "Record",
+  "transcribe": "Transcribe",
   "payment": "Payment",
   "missing_card_fields": "Missing card fields",
   "pay_now": "Pay now",
   "general_prompt": "General Prompt",
+  "transcription_powered_by_ai": "Transcription powered by AI",
+  "start_or_stop_recording": "Start or stop recording",
   "begin_message": "Begin Message",
   "codebase_has_to_stay_opensource": "The codebase has to stay open source, whether it was modified or not",
   "cannot_repackage_codebase": "You can not repackage or sell the codebase",
