--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -803,6 +803,40 @@
   "multiple_duration_timeUnit_short": "{{count}}$t({{unit}}_short)",
   "minutes": "Minutes",
   "use_cal_ai_to_make_call_description": "Use Cal.ai to get an AI powered phone number or make calls to guests.",
+  "termination_uri": "Termination URI",
+  "sip_trunk_username": "SIP Trunk User Name",
+  "sip_trunk_password": "SIP Trunk Password",
+  "nickname": "Nickname",
+  "delete_phone_number": "Delete Phone Number",
+  "workflow_validation_failed": "Workflow validation failed",
+  "workflow_validation_empty_fields": "One or more workflow steps have empty message content",
+  "workflow_validation_unverified_contacts": "One or more phone numbers or email addresses are not verified",
+  "phone_number_imported_successfully": "Phone number imported and linked to agent successfully",
+  "phone_number_deleted_successfully": "Phone number deleted successfully",
+  "delete_phone_number_confirmation": "Are you sure you want to delete this phone number? This action cannot be undone.",
+  "yes_delete_phone_number": "Yes, delete phone number",
+  "phone_number_info_tooltip": "The number you are trying to import in E.164 format of the number (+country code, then number with no space, no special characters), e.g. +1234567890",
+  "termination_uri_info_tooltip": "The termination uri to uniquely identify your elastic SIP trunk. This is used for outbound calls. For Twilio elastic SIP trunks it always end with .pstn.twilio.com.",
+  "sip_trunk_username_info_tooltip": "The username used for authentication for the SIP trunk.",
+  "sip_trunk_password_info_tooltip": "The password used for authentication for the SIP trunk.",
+  "nickname_info_tooltip": "Nickname of the number. This is for your reference only.",
+  "save_and_test_call": "Save and Test Call",
+  "call_initiated_successfully": "Call initiated successfully",
+  "please_enter_phone_number": "Please enter a phone number",
+  "agent_updated_successfully": "Agent updated successfully",
+  "agent_created_successfully": "Agent created successfully",
+  "phone_number_unsubscribed_successfully": "Phone number unsubscribed successfully",
+  "general_prompt_description": "This prompt defines the agent's role and primary objectives",
+  "prompt": "Prompt",
+  "call_to": "Call to",
+  "make_test_call_to_verify_configuration": "Make Test Call to Verify Configuration",
+  "initial_message": "Initial Message",
+  "initial_message_description": "The first message the agent will say when starting a call",
+  "having_trouble_importing": "Having trouble importing?",
+  "learn": "Learn",
+  "learn_how_to_get_your_terminator": "Learn how to get your Terminator and SIP",
+  "phone_number_subscription_cancelled_successfully": "Phone number subscription cancelled successfully",
+  "updating": "Updating",
   "round_robin": "Round Robin",
   "round_robin_description": "Cycle meetings between multiple team members.",
   "managed_event": "Managed Event",
@@ -811,6 +845,44 @@
   "managed": "Managed",
   "managed_event_url_clarification": "\"username\" will be filled by the username of the members assigned",
   "assign_to": "Assign to",
+  "enter_phone_number_to_test_call": "Enter phone number to test call",
+  "make_test_call": "Make Test Call",
+  "create_new_workflow_agent": "Create new workflow cal.ai voice agent",
+  "create_new_workflow_agent_description": "Create a new workflow cal.ai voice agent to automate your workflows",
+  "phone_number_for_ai_call": "Phone number (for our agent to call)",
+  "you_can_only_call_numbers_in_the_us": "You can only call numbers in the US",
+  "buy_a_phone_number_or_import_one_you_already_have": "Buy a phone number or import one you already have",
+  "test_agent": "Test Agent",
+  "phone_numbers": "Phone Numbers",
+  "unsubscribe": "Unsubscribe",
+  "delete_workflow_step": "Delete Workflow Step",
+  "unsubscribe_phone_number": "Unsubscribe Phone Number",
+  "no_phone_number_connected":"No phone number connected",
+  "failed_to_get_workflow_step_id": "Failed to get workflow step ID",
+  "test_cal_ai_agent": "Test Cal.ai Agent",
+  "are_you_sure_you_want_to_delete_workflow_step": "Are you sure you want to delete this workflow step?",
+  "are_you_still_want_to_unsubscribe": "Are you sure you want to unsubscribe the phone number from this agent?",
+  "the_action_will_disconnect_phone_number": "This action will disconnect the phone number from the agent. The agent will not be able to make calls until a new phone number is connected.",
+  "cal_ai_phone_numbers": "Cal AI Phone Numbers",
+  "cal_ai_phone_numbers_description": "Manage your Cal AI Phone Numbers",
+  "import_number": "Import Number",
+  "this_action_will_also": "This action will also:",
+  "import_phone_number": "Import Phone Number",
+  "active_subscription": "Active Subscription",
+  "cancel_your_phone_number_subscription": "Cancel your phone number subscription",
+  "delete_associated_phone_number": "Delete the associated phone number",
+  "unauthorized_create_workflow": "You are not authorized to create this workflow",
+  "import_phone_number_description": "Import your Twilio phone number to use with Cal AI Phone",
+  "phone_number_cost": "${{price}}/month",
+  "buy_new_number": "Buy New Number",
+  "buy_number_cost_5_per_month": "Buying a phone number costs $5 per month. You will be charged monthly for each active phone number.",
+  "area_code_optional": "Area Code (Optional)",
+  "buy_number_for_5_per_month": "Buy Number for $5/month",
+  "no_phone_numbers": "No phone numbers",
+  "phone_number_purchased_successfully": "Phone number purchased successfully",
+  "cancel_phone_number_subscription": "Cancel Phone Number Subscription",
+  "yes_cancel_subscription": "Yes, Cancel Subscription",
+  "cancel_phone_number_subscription_confirmation": "Are you sure you want to cancel this phone number subscription? This action cannot be undone and you will lose access to this phone number.",
   "add_members": "Add members...",
   "no_assigned_members": "No assigned members",
   "assigned_to": "Assigned to",
@@ -2623,6 +2695,8 @@
   "field_identifiers_as_variables_with_example": "Use field identifiers as variables for your custom event redirect (e.g. {{variable}})",
   "account_already_linked": "Account is already linked",
   "send_email": "Send email",
+  "cal_ai_phone_call_action": "Call attendee using Cal.ai Voice Agent",
+  "cal_ai_agent_configuration": "Cal.ai Agent Configuration",
   "mark_as_no_show": "Mark as no-show",
   "unmark_as_no_show": "Unmark no-show",
   "account_unlinked_success": "Account unlinked successfully",
@@ -3322,7 +3396,7 @@
   "pbac_desc_delete_roles": "Delete roles",
   "pbac_desc_manage_roles": "All actions on roles across organization teams",
   "pbac_desc_create_workflows": "Create and set up new workflows",
-  "pbac_desc_view_workflows": "View existing workflows and their configurations", 
+  "pbac_desc_view_workflows": "View existing workflows and their configurations",
   "pbac_desc_update_workflows": "Edit and modify workflow settings",
   "pbac_desc_delete_workflows": "Remove workflows from the system",
   "pbac_desc_manage_workflows": "Full management access to all workflows",
