Routing section all sections except embeddings done

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1685,6 +1685,9 @@
   "create_your_first_route": "Create your first route",
   "route_to_the_right_person": "Route to the right person based on the answers to your form",
   "form": "Form",
+  "form_name_lable": "Name",
+  "form_description_lable": "Description",
+  "form_link_lable": "Form Link",
   "form_description": "Create your form to route a booker",
   "copy_link_to_form": "Copy link to form",
   "theme": "Booking page theme",
@@ -1889,7 +1892,7 @@
   "admin_users_edit_description": "Here you can edit a current user.",
   "admin_orgs_edit_description": "Here you can edit an organization.",
   "admin_oAuth_description": "Add new OAuth Clients",
-  "admin_lockedSMS_description": "Lock or unlock SMS sending for users",
+  "admin_lockedSMS_description": "Lock or sending for users",
   "no_available_apps": "There are no available apps",
   "no_available_apps_description": "Please ensure there are apps in your deployment under 'packages/app-store'",
   "no_apps": "There are no apps enabled in this instance of Cal",
