--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2251,11 +2251,11 @@
   "error_collecting_card": "Error collecting card",
   "image_size_limit_exceed": "Uploaded image shouldn't exceed 5mb size limit",
   "unauthorized_workflow_error_message": "{{errorCode}}: You are not authorized to enable or disable this workflow",
-  "inline_embed": "Inline Embed",
+  "inline_embed": "Inline",
   "load_inline_content": "Loads your event type directly inline with your other website content.",
-  "floating_pop_up_button": "Floating pop-up button",
+  "floating_pop_up_button": "Floating Button",
   "floating_button_trigger_modal": "Puts a floating button on your site that triggers a modal with your event type.",
-  "pop_up_element_click": "Pop up via element click",
+  "pop_up_element_click": "Pop Up",
   "open_dialog_with_element_click": "Open your calendar as a dialog when someone clicks an element.",
   "need_help_embedding": "Need help? See our guides for embedding Cal on Wix, Squarespace, or WordPress, check our common questions, or explore advanced embed options.",
   "book_my_cal": "Book my Cal",
