--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3304,6 +3304,7 @@
   "pbac_action_read_team_bookings": "View Team Bookings",
   "pbac_action_read_org_bookings": "View Organization Bookings",
   "pbac_action_read_recordings": "View Recordings",
+  "pbac_action_impersonate": "Impersonate",
   "role_created_successfully": "Role created successfully",
   "role_updated_successfully": "Role updated successfully",
   "delete_role": "Delete role",
@@ -3338,6 +3339,7 @@
   "pbac_desc_invite_team_members": "Invite team members",
   "pbac_desc_remove_team_members": "Remove team members",
   "pbac_desc_change_team_member_role": "Change role of team members",
+  "pbac_desc_impersonate_team_members": "Impersonate team members",
   "pbac_desc_manage_teams": "All actions on teams across organization teams",
   "pbac_desc_create_organization": "Create organization",
   "pbac_desc_view_organization_details": "View organization details",
@@ -3346,6 +3348,7 @@
   "pbac_desc_remove_organization_members": "Remove organization members",
   "pbac_desc_manage_organization_billing": "Manage organization billing",
   "pbac_desc_change_organization_member_role": "Change role of organization members",
+  "pbac_desc_impersonate_organization_members": "Impersonate organization members",
   "pbac_desc_edit_organization_settings": "Edit organization settings",
   "pbac_desc_manage_organizations": "All actions on organizations",
   "pbac_desc_view_bookings": "View bookings",
