Appearance page done

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -737,6 +737,7 @@
   "invite_via_email": "Invite via email",
   "change_member_role": "Change team member role",
   "disable_cal_branding": "Disable {{appName}} branding",
+  "disable_branding": "Disable branding",
   "disable_cal_branding_description": "Hide all {{appName}} branding from your public pages.",
   "hide_book_a_team_member": "Hide Book a Team Member Button",
   "hide_book_a_team_member_description": "Hide Book a Team Member Button from your public pages.",
@@ -1542,12 +1543,17 @@
   "adding_events_to": "Adding events to",
   "follow_system_preferences": "Follow system preferences",
   "custom_brand_colors": "Custom brand colors",
+  "custom_brand_logo": "Custom brand logo",
+  "custom_brand_logo_description": "Add your own brand logo into your booking page.",
+  "custom_brand_favicon": "Custom brand favicon",
+  "custom_brand_favicon_description": "Add your own brand favicon into your booking page.",
   "customize_your_brand_colors": "Customize your own brand colour into your booking page.",
   "pro": "Pro",
   "removes_cal_branding": "Removes any {{appName}} related brandings, i.e. 'Powered by {{appName}}.'",
   "instant_meeting_with_title": "Instant Meeting with {{name}}",
   "profile_picture": "Profile Picture",
   "upload": "Upload",
+  "upload_favicon": "Upload favicon",
   "add_profile_photo": "Add profile photo",
   "token_address": "Token Address",
   "blockchain": "Blockchain",
