--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2705,6 +2705,7 @@
   "travel_schedule_description": "Plan your trip ahead to keep your existing schedule in a different timezone and prevent being booked at midnight.",
   "schedule_timezone_change": "Schedule timezone change",
   "date": "Date",
+  "enter_the_general_prompt_for_the_agent": "Enter the general prompt for the agent",
   "overlaps_with_existing_schedule": "This overlaps with an existing schedule. Please select a different date.",
   "org_admin_no_slots|heading": "No availability found for {{name}}",
   "org_admin_no_slots|content": "Hello Organization Admins,<br /><br />Please note: It has been brought to our attention that {{username}} has not had any availability when a user has visited {{username}}/{{slug}}<br /><br />There's a few reasons why this could be happening<br />The user does not have any calendars connected<br />Their schedules attached to this event are not enabled<br /> <br />We recommend checking their availability to resolve this.",
