Bookings and Routing Insights done

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2332,7 +2332,7 @@
   "404_claim_entity_team": "Claim this team and start managing schedules collectively",
   "insights_team_filter": "Team: {{teamName}}",
   "insights_user_filter": "User: {{userName}}",
-  "insights_subtitle": "View booking insights across your events",
+  "insights_subtitle": "Analytics and performance metrics for your scheduling activities",
   "location_options": "{{locationCount}} location options",
   "custom_plan": "Custom Plan",
   "email_embed": "Email Embed",
