--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -815,10 +815,10 @@
   "phone_number_deleted_successfully": "Phone number deleted successfully",
   "delete_phone_number_confirmation": "Are you sure you want to delete this phone number? This action cannot be undone.",
   "yes_delete_phone_number": "Yes, delete phone number",
-  "phone_number_info_tooltip": "The number you are trying to import in E.164 format of the number (+country code, then number with no space, no special characters), e.g. +1234567890",
-  "termination_uri_info_tooltip": "The termination uri to uniquely identify your elastic SIP trunk. This is used for outbound calls. For Twilio elastic SIP trunks it always end with .pstn.twilio.com.",
-  "sip_trunk_username_info_tooltip": "The username used for authentication for the SIP trunk.",
-  "sip_trunk_password_info_tooltip": "The password used for authentication for the SIP trunk.",
+  "phone_number_info_tooltip": "The number you are trying to import must be in E.164 format (+country code followed by the number, with no spaces or special characters), e.g. +1234567890",
+  "termination_uri_info_tooltip": "The termination uri to uniquely identify your elastic SIP trunk. This is used for outbound calls. For Twilio elastic SIP trunks it always ends with .pstn.twilio.com.",
+  "sip_trunk_username_info_tooltip": "The username used to authenticate the SIP trunk.",
+  "sip_trunk_password_info_tooltip": "The password used to authenticate the SIP trunk.",
   "nickname_info_tooltip": "Nickname of the number. This is for your reference only.",
   "save_and_test_call": "Save and Test Call",
   "call_initiated_successfully": "Call initiated successfully",
@@ -835,7 +835,7 @@
   "having_trouble_importing": "Having trouble importing?",
   "learn": "Learn",
   "learn_how_to_get_your_terminator": "Learn how to get your Terminator and SIP",
-  "phone_number_subscription_cancelled_successfully": "Phone number subscription cancelled successfully",
+  "phone_number_subscription_cancelled_successfully": "Phone number subscription canceled successfully",
   "updating": "Updating",
   "round_robin": "Round Robin",
   "round_robin_description": "Cycle meetings between multiple team members.",
@@ -859,6 +859,7 @@
   "unsubscribe_phone_number": "Unsubscribe Phone Number",
   "no_phone_number_connected":"No phone number connected",
   "failed_to_get_workflow_step_id": "Failed to get workflow step ID",
+  "cal_ai_agent": "Cal.ai Agent",
   "test_cal_ai_agent": "Test Cal.ai Agent",
   "are_you_sure_you_want_to_delete_workflow_step": "Are you sure you want to delete this workflow step?",
   "are_you_still_want_to_unsubscribe": "Are you sure you want to unsubscribe the phone number from this agent?",
