feat: Add Cal Video Webhook triggers

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3472,5 +3472,27 @@
   "webhook_metadata": "Metadata",
   "stats": "Stats",
   "booking_status": "Booking status",
+  "cal_video_started": "Cal Video Started",
+  "cal_video_ended": "Cal Video Ended", 
+  "cal_video_recording_started": "Cal Video Recording Started",
+  "cal_video_recording_stopped": "Cal Video Recording Stopped",
+  "cal_video_recording_ready": "Cal Video Recording Ready",
+  "booking_events": "Booking Events",
+  "cal_video_events": "Cal Video Events",
+  "routing_form_events": "Routing Form Events",
+  "select_booking_triggers": "Select booking triggers...",
+  "select_cal_video_triggers": "Select Cal Video triggers...",
+  "select_routing_form_triggers": "Select routing form triggers...",
+  "webhook_cal_video": "Cal Video",
+  "webhook_cal_video_session_id": "Video session ID",
+  "webhook_cal_video_actual_duration": "Actual video call duration in minutes",
+  "webhook_cal_video_recording_url": "Recording download URL",
+  "webhook_cal_video_participant_count": "Number of participants",
+  "webhook_cal_video_participant_name": "Participant name",
+  "webhook_cal_video_participant_email": "Participant email",
+  "webhook_cal_video_participant_joined_at": "When participant joined",
+  "webhook_cal_video_participant_left_at": "When participant left",
+  "webhook_cal_video_resolution": "Video resolution",
+  "webhook_cal_video_connection_quality": "Connection quality rating",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
