--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -109,6 +109,7 @@
   "payment_not_created_error": "Payment could not be created",
   "couldnt_charge_card_error": "Could not charge card for Payment",
   "no_available_users_found_error": "No available users found. Could you try another time slot?",
+  "twilio_invalid_phone_number_error": "The phone number provided is not valid. Please check the format and try again.",
   "timeslot_unavailable_book_a_new_time": "The selected time slot is no longer available. <0>Please select a new time</0>",
   "timeslot_unavailable_short": "Taken",
   "unavailable_timeslot_title": "Unavailable timeslot",
