--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -876,9 +876,9 @@
   "import_phone_number_description": "Import your Twilio phone number to use with Cal AI Phone",
   "phone_number_cost": "${{price}}/month",
   "buy_new_number": "Buy New Number",
-  "buy_number_cost_5_per_month": "Buying a phone number costs $5 per month. You will be charged monthly for each active phone number.",
+  "buy_number_cost_x_per_month": "Buying a phone number costs ${{priceInDollars}} per month. You will be charged monthly for each active phone number.",
   "area_code_optional": "Area Code (Optional)",
-  "buy_number_for_5_per_month": "Buy Number for $5/month",
+  "buy_number_for_x_per_month": "Buy Number for ${{priceInDollars}}/month",
   "no_phone_numbers": "No phone numbers",
   "phone_number_purchased_successfully": "Phone number purchased successfully",
   "cancel_phone_number_subscription": "Cancel Phone Number Subscription",
