--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -3322,7 +3322,7 @@
   "pbac_desc_delete_roles": "Delete roles",
   "pbac_desc_manage_roles": "All actions on roles across organization teams",
   "pbac_desc_create_workflows": "Create and set up new workflows",
-  "pbac_desc_view_workflows": "View existing workflows and their configurations", 
+  "pbac_desc_view_workflows": "View existing workflows and their configurations",
   "pbac_desc_update_workflows": "Edit and modify workflow settings",
   "pbac_desc_delete_workflows": "Remove workflows from the system",
   "pbac_desc_manage_workflows": "Full management access to all workflows",
@@ -3472,5 +3472,6 @@
   "webhook_metadata": "Metadata",
   "stats": "Stats",
   "booking_status": "Booking status",
+  "location_custom_label_input_label": "Custom label on booking page",
   "ADD_NEW_STRINGS_ABOVE_THIS_LINE_TO_PREVENT_MERGE_CONFLICTS": "↑↑↑↑↑↑↑↑↑↑↑↑↑ Add your new strings above here ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑"
 }
