--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1,4 +1,6 @@
 {
+  "schedule": "Schedule",
+  "choose_a_meeting_type" : "Choose a meeting type",
   "identity_provider": "Identity provider",
   "trial_days_left": "You have $t(day, {\"count\": {{days}} }) left on your PRO trial",
   "day_one": "{{count}} day",
@@ -868,6 +870,7 @@
   "brand_color": "Brand Color",
   "light_brand_color": "Brand Color (Light Theme)",
   "dark_brand_color": "Brand Color (Dark Theme)",
+  "header_svg": "Header svg background",
   "light_event_type_color": "Event Type Color (Light Theme)",
   "dark_event_type_color": "Event Type Color (Dark Theme)",
   "file_not_named": "File is not named [idOrSlug]/[user]",
