--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -2350,6 +2350,7 @@
   "insights_user_filter": "User: {{userName}}",
   "insights_subtitle": "Analytics and performance metrics for your scheduling activities",
   "location_options": "{{locationCount}} location options",
+  "location_options_label": "Location options",
   "custom_plan": "Custom Plan",
   "email_embed": "Email Embed",
   "add_times_to_your_email": "Select a few available times and embed them in your Email",
