filter outside scheduleWorkflowReminder

--- a/apps/web/public/static/locales/en/common.json
+++ b/apps/web/public/static/locales/en/common.json
@@ -1774,7 +1774,7 @@
   "booking_rejected_trigger": "when booking is rejected",
   "booking_requested_trigger": "when booking is requested",
   "booking_payment_initiated_trigger": "when booking payment is initiated",
-  "booking_paid_trigger": "when booking is paid",
+  "booking_paid_trigger": "when booking payment is successful",
   "booking_no_show_updated_trigger": "when booking no-show is updated",
   "how_long_after": "How long after event ends?",
   "how_long_after_hosts_no_show": "How long after hosts don't show up on cal video meeting?",
@@ -3327,7 +3327,7 @@
   "pbac_desc_delete_roles": "Delete roles",
   "pbac_desc_manage_roles": "All actions on roles across organization teams",
   "pbac_desc_create_workflows": "Create and set up new workflows",
-  "pbac_desc_view_workflows": "View existing workflows and their configurations", 
+  "pbac_desc_view_workflows": "View existing workflows and their configurations",
   "pbac_desc_update_workflows": "Edit and modify workflow settings",
   "pbac_desc_delete_workflows": "Remove workflows from the system",
   "pbac_desc_manage_workflows": "Full management access to all workflows",
